<resources>
    <string name="app_name">Night Sky Guide</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="insert_failed">Insert failed: s</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_delete">Delete</string>
    <string name="menuitem_location">Update Location</string>
    <string name="menuitem_info">App Info</string>
    <string name="hint_objectid_required">Object ID (Required)</string>
    <string name="hint_type">Type</string>
    <string name="hint_mag">Magnitude</string>
    <string name="hint_size">Size (arcmins)</string>
    <string name="hint_dist">Distance</string>
    <string name="hint_RA">RA (ddd.ddd)</string>
    <string name="hint_dec">DEC (ddd.ddd)</string>
    <string name="hint_const">Constellation</string>
    <string name="hint_name">Common Name</string>
    <string name="hint_psa">PSA Page(s)</string>
    <string name="hint_oith">OITH Page(s)</string>
    <string name="hint_skyatlas">Sky Atlas</string>
    <string name="hint_observed">Observed (0/1)</string>
    <string name="label_objectid">Object ID:</string>
    <string name="label_catalogue">Catalogue:</string>
    <string name="label_type">Type:</string>
    <string name="label_mag">Magnitude:</string>
    <string name="label_size">Size:</string>
    <string name="label_dist">Distance:</string>
    <string name="label_RA">RA:</string>
    <string name="label_dec">DEC:</string>
    <string name="label_const">Constellation:</string>
    <string name="label_name">Common Name:</string>
    <string name="label_psa">Pocket Sky Atlas:</string>
    <string name="label_oith">OITH Fieldbook:</string>
    <string name="label_skyatlas">Sky Atlas 2000:</string>
    <string name="label_observed">Observed:</string>
    <string name="label_alt">Altitude:</string>
    <string name="label_az">Azimuth:</string>
    <string name="label_rise">Rise Time:</string>
    <string name="label_set">Set Time:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_app_info">AppInfoActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="default_latitude">31.9601</string>
    <string name="default_longitude">-111.5982</string>
    <string name="hint_date">Date</string>
    <string name="hint_location">Location</string>
    <string name="hint_seeing">Seeing</string>
    <string name="hint_transparency">Transparency</string>
    <string name="hint_telescope">Telescope</string>
    <string name="hint_eyepiece">Eyepiece</string>
    <string name="hint_power">Power/Magnification</string>
    <string name="hint_filter">Filter</string>
    <string name="hint_notes">Observation Notes</string>
    <string name="pref_show_observed">Display previously observed</string>
    <string name="pref_display_below_horizon">Display objects below horizon</string>
    <string name="pref_max_magintude">Maximum magnitude to display:</string>
    <string name="loc_current_title">VIEWING LOCATION:</string>
    <string name="loc_current_lat_title">Latitude</string>
    <string name="loc_current_long_title">Longitude</string>
    <string name="loc_current_lat_label">Latitude (dd.dddd):</string>
    <string name="loc_current_long_label">Longitude +E/-W (dd.dddd):</string>
    <string name="menuitem_settings">Settings</string>
    <string name="location_default">Kitt Peak</string>
    <string name="location_null"></string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_loc_label_req">Location (required)</string>
    <string name="pref_loc_label">Location (blank for null)</string>
    <string name="pref_checkbox">pref_checkbox</string>
    <string name="title_activity_observations">Observation Log</string>
    <string name="hint_time">Time</string>
    <string name="label_date">Date:</string>
    <string name="label_location">Location:</string>
    <string name="menuitem_logbook">Logbook</string>
    <string name="export_csv">Export Log to CSV</string>
    <string name="hint_objectID">Object ID</string>
    <string name="menuitem_credits">Credits</string>
    <string name="title_settings">Settings</string>
    <string name="hint_app_info_image">Viewing Tips</string>
    <string name="label_transit">Transit Time:</string>

    <string name="constellation_name_AND">Andromeda</string>
    <string name="constellation_name_ANT">Antlia</string>
    <string name="constellation_name_APS">Apus</string>
    <string name="constellation_name_AQL">Aquila</string>
    <string name="constellation_name_AQR">Aquarius</string>
    <string name="constellation_name_ARA">Ara</string>
    <string name="constellation_name_ARI">Aries</string>
    <string name="constellation_name_AUR">Auriga</string>
    <string name="constellation_name_BOO">Boötes</string>
    <string name="constellation_name_CAE">Caelum</string>
    <string name="constellation_name_CAM">Camelopardalis</string>
    <string name="constellation_name_CAP">Capricornus</string>
    <string name="constellation_name_CAR">Carina</string>
    <string name="constellation_name_CAS">Cassiopeia</string>
    <string name="constellation_name_CEN">Centaurus</string>
    <string name="constellation_name_CEP">Cepheus</string>
    <string name="constellation_name_CET">Cetus</string>
    <string name="constellation_name_CHA">Chamaeleon</string>
    <string name="constellation_name_CIR">Circinus</string>
    <string name="constellation_name_CMA">Canis Major</string>
    <string name="constellation_name_CMI">Canis Minor</string>
    <string name="constellation_name_CNC">Cancer</string>
    <string name="constellation_name_COL">Columba</string>
    <string name="constellation_name_COM">Coma Berenices</string>
    <string name="constellation_name_CRA">Corona Austrina</string>
    <string name="constellation_name_CRB">Corona Borealis</string>
    <string name="constellation_name_CRT">Crater</string>
    <string name="constellation_name_CRU">Crux</string>
    <string name="constellation_name_CRV">Corvus</string>
    <string name="constellation_name_CVN">Canes Venatici</string>
    <string name="constellation_name_CYG">Cygnus</string>
    <string name="constellation_name_DEL">Delphinus</string>
    <string name="constellation_name_DOR">Dorado</string>
    <string name="constellation_name_DRA">Draco</string>
    <string name="constellation_name_EQU">Equuleus</string>
    <string name="constellation_name_ERI">Eridanus</string>
    <string name="constellation_name_FOR">Fornax</string>
    <string name="constellation_name_GEM">Gemini</string>
    <string name="constellation_name_GRU">Grus</string>
    <string name="constellation_name_HER">Hercules</string>
    <string name="constellation_name_HOR">Horologium</string>
    <string name="constellation_name_HYA">Hydra</string>
    <string name="constellation_name_HYI">Hydrus</string>
    <string name="constellation_name_IND">Indus</string>
    <string name="constellation_name_LAC">Lacerta</string>
    <string name="constellation_name_LEO">Leo</string>
    <string name="constellation_name_LEP">Lepus</string>
    <string name="constellation_name_LIB">Libra</string>
    <string name="constellation_name_LMI">Leo Minor</string>
    <string name="constellation_name_LUP">Lupus</string>
    <string name="constellation_name_LYN">Lynx</string>
    <string name="constellation_name_LYR">Lyra</string>
    <string name="constellation_name_MEN">Mensa</string>
    <string name="constellation_name_MIC">Microscopium</string>
    <string name="constellation_name_MON">Monoceros</string>
    <string name="constellation_name_MUS">Musca</string>
    <string name="constellation_name_NOR">Norma</string>
    <string name="constellation_name_OCT">Octans</string>
    <string name="constellation_name_OPH">Ophiuchus</string>
    <string name="constellation_name_ORI">Orion</string>
    <string name="constellation_name_PAV">Pavo</string>
    <string name="constellation_name_PEG">Pegasus</string>
    <string name="constellation_name_PER">Perseus</string>
    <string name="constellation_name_PHE">Phoenix</string>
    <string name="constellation_name_PIC">Pictor</string>
    <string name="constellation_name_PSA">Piscis Austrinus</string>
    <string name="constellation_name_PSC">Pisces</string>
    <string name="constellation_name_PUP">Puppis</string>
    <string name="constellation_name_PYX">Pyxis</string>
    <string name="constellation_name_RET">Reticulum</string>
    <string name="constellation_name_SCL">Sculptor</string>
    <string name="constellation_name_SCO">Scorpius</string>
    <string name="constellation_name_SCT">Scutum</string>
    <string name="constellation_name_SER">Serpens</string>
    <string name="constellation_name_SEX">Sextans</string>
    <string name="constellation_name_SGE">Sagitta</string>
    <string name="constellation_name_SGR">Sagittarius</string>
    <string name="constellation_name_TAU">Taurus</string>
    <string name="constellation_name_TEL">Telescopium</string>
    <string name="constellation_name_TRA">Triangulum Australe</string>
    <string name="constellation_name_TRI">Triangulum</string>
    <string name="constellation_name_TUC">Tucana</string>
    <string name="constellation_name_UMA">Ursa Major</string>
    <string name="constellation_name_UMI">Ursa Minor</string>
    <string name="constellation_name_VEL">Vela</string>
    <string name="constellation_name_VIR">Virgo</string>
    <string name="constellation_name_VOL">Volans</string>
    <string name="constellation_name_VUL">Vulpecula</string>

</resources>
