<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <!-- Section 1 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true">

        <RelativeLayout
            android:id="@+id/Section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/objectIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/divider_margin"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/objectIdTextView"
                android:gravity="center_vertical"
                android:padding="@dimen/divider_margin"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- Section 2 - DSO General Info -->
        <LinearLayout
            android:id="@+id/Section2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/Section1">

            <RelativeLayout
                android:id="@+id/Section2L"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:layout_weight="0.45">

                <TextView
                    android:id="@+id/catLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_catalogue" />

                <TextView
                    android:id="@+id/typeLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/catLabelTextView"
                    android:text="@string/label_type" />

                <TextView
                    android:id="@+id/magLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/typeLabelTextView"
                    android:text="@string/label_mag" />

                <TextView
                    android:id="@+id/sizeLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/magLabelTextView"
                    android:text="@string/label_size" />

                <TextView
                    android:id="@+id/distLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sizeLabelTextView"
                    android:text="@string/label_dist" />

                <TextView
                    android:id="@+id/psaLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/distLabelTextView"
                    android:text="@string/label_psa" />

                <TextView
                    android:id="@+id/oithLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/psaLabelTextView"
                    android:text="@string/label_oith" />

                <TextView
                    android:id="@+id/skyAtlasLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/oithLabelTextView"
                    android:text="@string/label_skyatlas" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Section2R"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55">

                <TextView
                    android:id="@+id/catTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/typeTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/catTextView" />

                <TextView
                    android:id="@+id/magTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/typeTextView" />

                <TextView
                    android:id="@+id/sizeTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/magTextView" />

                <TextView
                    android:id="@+id/distTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sizeTextView" />

                <TextView
                    android:id="@+id/psaTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/distTextView" />

                <TextView
                    android:id="@+id/oithTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/psaTextView" />

                <TextView
                    android:id="@+id/skyAtlasTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/oithTextView" />

            </RelativeLayout>

        </LinearLayout>

        <!-- Section 2 & 2.5 Divider line -->
        <TextView
            android:id="@+id/line25"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Section2"
            android:background="@android:color/darker_gray"
            android:gravity="bottom"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" />

        <!-- Section 2.5 - Rise/Transit/Set Time Info -->
            <LinearLayout
                android:id="@+id/Section25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/line25">

                <RelativeLayout
                    android:id="@+id/Section25L"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45">

                    <TextView
                        android:id="@+id/riseLabelTextView"
                        style="@style/DSObjectLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_rise" />

                    <TextView
                        android:id="@+id/transitLabelTextView"
                        style="@style/DSObjectLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/riseLabelTextView"
                        android:text="@string/label_transit"/>

                    <TextView
                        android:id="@+id/transitAltLabelTextView"
                        style="@style/DSObjectLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/transitLabelTextView"
                        android:text="@string/label_transit_alt"/>

                    <TextView
                        android:id="@+id/setLabelTextView"
                        style="@style/DSObjectLabelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/transitAltLabelTextView"
                        android:paddingBottom="12dp"
                        android:text="@string/label_set" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/Section25R"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55">

                    <TextView
                        android:id="@+id/riseTextView"
                        style="@style/DSObjectTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/transitTextView"
                        style="@style/DSObjectTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/riseTextView"/>

                    <TextView
                        android:id="@+id/transitAltTextView"
                        style="@style/DSObjectTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/transitTextView"/>

                    <TextView
                        android:id="@+id/setTextView"
                        style="@style/DSObjectTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/transitAltTextView" />

                </RelativeLayout>

            </LinearLayout>

        <!-- Section 2.5 & 3 Divider line -->
        <TextView
            android:id="@+id/line3"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Section25"
            android:background="@android:color/darker_gray"
            android:gravity="bottom"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" />

        <!-- Section 3 - Equatorial & Horizon Coordinate Info -->
        <LinearLayout
            android:id="@+id/Section3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/line3">

            <RelativeLayout
                android:id="@+id/Section3L"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45">

                <TextView
                    android:id="@+id/raLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_RA" />

                <TextView
                    android:id="@+id/decLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/raLabelTextView"
                    android:text="@string/label_dec" />

                <TextView
                    android:id="@+id/altLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/decLabelTextView"
                    android:text="@string/label_alt" />

                <TextView
                    android:id="@+id/azLabelTextView"
                    style="@style/DSObjectLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:layout_below="@id/altLabelTextView"
                    android:text="@string/label_az" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Section3R"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55">

                <TextView
                    android:id="@+id/raTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/decTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/raTextView" />

                <TextView
                    android:id="@+id/altTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/decTextView" />

                <TextView
                    android:id="@+id/azTextView"
                    style="@style/DSObjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/altTextView" />

            </RelativeLayout>

        </LinearLayout>

    <!-- Section 3 & 4 Divider Line -->
    <TextView
        android:id="@+id/line4"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/Section3"
        android:background="@android:color/darker_gray"
        android:gravity="bottom"
        android:paddingBottom="12dp"
        android:paddingTop="12dp" />

    <!-- Section 4 - Constellation -->
    <LinearLayout
        android:id="@+id/Section4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line4">

        <RelativeLayout
            android:id="@+id/Section4L"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45">

            <TextView
                android:id="@+id/constLabelTextView"
                style="@style/DSObjectLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_const" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Section4R"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55">

        <TextView
            android:id="@+id/constTextView"
            style="@style/DSObjectTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        </RelativeLayout>

    </LinearLayout>

        <RelativeLayout
            android:id="@+id/Section5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Section4"
            android:paddingTop="12dp">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/constImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hint_const"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>